gccida/c2/call_insn_operand
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/call_insn_operand/src/i386.c:3489:33: error: must use 'enum' tag to refer to type 'machine_mode'
int  call_insn_operand( rtx op, machine_mode mode) 
                                ^
                                enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/call_insn_operand/src/i386.c:3502:41: error: expected expression
else if ( v2 != 61 || global_rtl[5] !=  struct op && global_rtl[3] !=  struct op && ( unsigned int)( op->fld[0].rtint - 53) >= 5 ) 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/call_insn_operand/src/i386.c:3504:31: error: use of undeclared identifier 'machine_mode'
return general_operand( op, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32)); 
                              ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/call_insn_operand/src/obj/i386.o] Error 1
